<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical" >
	
	    <EditText
	        android:id="@+id/etISBN"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:ems="10"
	        android:hint="@string/isbnCode" >
	        <requestFocus />
		</EditText>

	    <Button
	        android:id="@+id/btnDownloadInfo"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/ok" />
	
	    <EditText
	        android:id="@+id/etBookName"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:ems="10"
	        android:layout_marginTop="30dp"
	        android:hint="@string/bookname" />
	
	
	    <EditText
	        android:id="@+id/etAuthorName"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:ems="10"
	        android:hint="@string/authorName"
	        android:inputType="textPersonName" />
	
	    <AutoCompleteTextView
	        android:id="@+id/etLendedTo"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:ems="10"
	        android:hint="@string/lendedTo"
	        android:inputType="textPersonName" />
	
	    <EditText
	        android:id="@+id/etEmail"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:ems="10"
	        android:hint="@string/email"
	        android:inputType="textEmailAddress" />

	    <TextView
	        android:id="@+id/textView1"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/dueDate" />
	
	    <DatePicker
	        android:id="@+id/dpDueDate"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:calendarViewShown="false" />
	
	    <Button
	        android:id="@+id/btnAddBook"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/addbook" />
	
	</LinearLayout>
</ScrollView>
