<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" xmlns:tools="http://schemas.android.com/tools">
    
    <EditText
	        android:id="@+id/etBookName"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:ems="10"
	        android:hint="@string/bookname" />
	
	
	    <EditText
	        android:id="@+id/etAuthorName"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:ems="10"
	        android:hint="@string/authorName"
	        android:inputType="textPersonName" />
	
	    <AutoCompleteTextView
	        android:id="@+id/etLendedTo"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:ems="10"
	        android:hint="@string/lendedTo"
	        android:inputType="textPersonName" />
	
	    <EditText
	        android:id="@+id/etEmail"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:ems="10"
	        android:hint="@string/email"
	        android:inputType="textEmailAddress" />

	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content" >

	        <ImageView
	            android:id="@+id/image"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            tools:ignore="ContentDescription" />

	        <EditText
	            android:id="@+id/etImageUrl"
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:ems="10"
	            android:hint="@string/url"
	            android:inputType="textUri" />

	        <Button
	            android:id="@+id/btnTakePicture"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/takePicture"
	            android:textSize="15sp" />

	    </LinearLayout>
    

</LinearLayout>
