<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/youScanned"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/tvBookName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center" />
    
   <TextView
        android:id="@+id/tvBookAuthor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center" />

   <Button
       android:id="@+id/btnAddBook"
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
       android:text="@string/addScannedBook" />
   
   <Button
       android:id="@+id/btnReturnBook"
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
       android:text="@string/returnScannedBook" />
   
   <Button
       android:id="@+id/btnEditBook"
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
       android:text="@string/editScannedBook" />

</LinearLayout>
